Wed Jun  7 17:52:38 1995  Per Bothner  <bothner@kalessin.cygnus.com>

	* chillvars.ch (xptr):  Declare new variable.
	* chillvars.exp (test_ptr):  New function to test EXPR->MODENAME.

Tue Mar 28 17:13:13 1995  Per Bothner  <bothner@kalessin.cygnus.com>

	* pr-6632.ch, pr-6632-grt.ch, pr-6632.exp, Makefile.in:  New test case.

Tue Mar 21 12:10:06 1995  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* tuples.exp (do_tests): Make names of "print v_ps" test unique.

Wed Mar  8 13:26:36 1995  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* *.exp: Skip all tests silently if skip_chill_tests returns true.

	* misc.exp: Remove reference to non-existent variable passcount.

Tue Mar  7 19:30:05 1995  Per Bothner  <bothner@kalessin.cygnus.com>

	* string.ch, string.exp, Makefile.in:  New test case.

Mon Mar  6 14:11:01 1995  Per Bothner  <bothner@kalessin.cygnus.com>

	* tuples.ch (setnmode);  New module.
	* tuples.exp:  Add some extra tests.

Sat Mar  4 15:16:17 1995  Per Bothner  <bothner@kalessin.cygnus.com>

	* callch.ch, callch.exp, Makefile.in:  New test case.

Thu Mar  2 06:17:41 1995  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* misc.exp: If executable does not exist, issue warning and skip
	remaining tests, like other chill tests.

Wed Mar  1 20:28:42 1995  Per Bothner  <bothner@kalessin.cygnus.com>

	* misc.ch, misc.exp, Makefile.in:  New test case.

Mon Feb 20 16:19:58 1995  Per Bothner  <bothner@kalessin.cygnus.com>

	* chillvars.ch:  Add missing INIT's.
	* chillvars.exp:  Allow builtin types as either case. E.g. (BOOL|bool).
	* pr-5016.exp:  Likewise.

Sun Feb 12 11:26:08 1995  Per Bothner  <bothner@kalessin.cygnus.com>

	* pr-6292.ch, pr-6292.exp, Makefile.in:  New test case.

Wed Feb  1 13:09:48 1995  Per Bothner  <bothner@kalessin.cygnus.com>

	* tuples.ch, tuples.exp, Makefile.in:  New test case.

Mon Nov 28 18:39:08 1994  Per Bothner  <bothner@kalessin.cygnus.com>

	* pr-5984.ch, pr-5984.exp, Makefile.in:  New test case.
